--- a/package.json
+++ b/package.json
@@ -13,9 +13,16 @@
     "@types/react-dom": "^18.2.4",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.4.0",
+    "babel-plugin-styled-components": "^2.1.3",
+    "blockchain": "^1.0.6",
+    "carousel": "^0.0.3",
+    "cybersecurity": "^0.0.1",
+    "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "security": "^1.0.0",
+    "styled-components": "^6.0.0-rc.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
